<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/color_surface"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <ImageView
            android:id="@+id/btnRecoverBack"
            android:padding="6dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:tint="@color/color_text_primary"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_nav_back"/>
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/recover_title"/>
    </LinearLayout>
    <View
        android:background="@color/color_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:inputType="text"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <EditText
                    android:id="@+id/etCaptcha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/captcha_hint"
                    android:maxLength="5"
                    android:layout_weight="1"
                    android:inputType="number"/>
                <ImageView
                    android:id="@+id/ivCaptcha"
                    android:background="@color/color_surface"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@null"/>
            </LinearLayout>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>
            <Button
                android:id="@+id/btnSendRecoverCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recover_send_code"
                style="@style/FlatButtonOutline"/>
            <EditText
                android:id="@+id/etEmailCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_code_hint"
                android:maxLength="6"
                android:inputType="number"/>
            <EditText
                android:id="@+id/etNewPassword"
                android:saveEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password_hint"
                android:freezesText="false"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recover_reset_password"
                style="@style/FlatButtonPrimary"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
